--- a/public/features/babytrack/babytrack.html
+++ b/public/features/babytrack/babytrack.html
@@ -17,7 +17,25 @@
         </div>
     </div>
 </div>
-
+<div class="row">
+    <div class="col-md-8">
+        <div class="box box-default collapsed-box">
+            <div class="box-header with-border" ng-click="clickOnButton()">
+                <h3 class="box-title">Opciones</h3>
+                <div class="box-tools pull-right">
+                    <button class="toggleButton btn btn-danger" data-widget="collapse"><i class="fa fa-plus"></i></button>
+                </div><!-- /.box-tools -->
+            </div><!-- /.box-header -->
+            <div class="box-body" style="display: none;">
+                <button ng-click="toggleRemove()" type="button" class="btn btn-danger"><i class="fa fa-remove"></i> Editar</button>
+                &nbsp;&nbsp;&nbsp;
+                <button ng-click="updateList()" type="button" class="btn btn-primary"> Todo</button>
+                &nbsp;&nbsp;&nbsp;
+                <button ng-click="pronosticarLeche()" type="button" class="btn btn-warning"> Leche</button>
+            </div><!-- /.box-body -->
+        </div>
+    </div>
+</div>
 <div class="row">
     <div class="col-md-6">
         <div class="box">
@@ -25,31 +43,35 @@
                 <h3 class="box-title">baby Track</h3>
             </div><!-- /.box-header -->
             <div class="box-body no-padding">
+
                 <table class="table table-striped">
                     <tbody><tr>
-                        <th style="width: 10px">#</th>
+                        <th >#</th>
                         <th>Accion</th>
                         <th>Hora</th>
-                        <th></th>
+                        <th ng-if="flagRemove"></th>
 
                     </tr>
                     <tr ng-repeat="row in records">
                         <td>
-                            {{row.id}}
+                            {{ row.fromNow}}
                         </td>
                         <td>
                             {{row.category }}
                         </td>
                         <td>
-                            {{ row.time }} - {{ row.fromNow}}
+                            {{ row.time }}
                         </td>
-                        <td>
-                            <a ng-click="removeFromList(row.id)"><i class="fa fa-remove"></i></a>
+                        <td ng-if="flagRemove">
+                            <button ng-click="removeFromList(row.id)" type="button" class="btn btn-danger"><i class="fa fa-remove"></i></button>
                         </td>
                     </tr>
 
                     </tbody></table>
             </div><!-- /.box-body -->
+            <div class="overlay" ng-show="flagLoading">
+                <i class="fa fa-refresh fa-spin"></i>
+            </div>
         </div>
     </div>
 </div>
